# api-health

./: .dockerignore  .gitignore  Dockerfile  README.md  eda.ipynb  main.py  pyproject.toml
artifacts/: bytes_transferred_mean.pkl  bytes_transferred_std.pkl  feature_columns.pkl  label_mapping.pkl
inference/: api.py  logging.py  schemas.py  service.py
logs/: log.txt
models/: best_model.pkl  final_metrics.pkl
notebooks/: eda.ipynb  test_notebook.ipynb  train.ipynb
src/: evaluation.py  model.py  preparation.py  train.py  tuning.py  validation.py
