[project]
name = "cybersec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "ipykernel",
    "joblib",
    "matplotlib",
    "nbformat",
    "pandas",
    "plotly",
    "polars",
    "pyarrow",
    "pytest",
    "scikit-learn",
    "scipy",
    "seaborn",
    "uvicorn",
    "xgboost",
]
