[project]
name = "cybersec"
version = "0.1.0"
description = "Cybersecurity threat detection pipeline"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "joblib",
    "polars",
    "scikit-learn",
    "uvicorn",
    "xgboost",
]

[project.optional-dependencies]
dev = [
    "ipykernel",
    "matplotlib",
    "nbformat",
    "pandas",
    "plotly",
    "pyarrow",
    "pytest",
    "scipy",
    "seaborn",
]
