[project]
name = "cybersec"
version = "0.1.0"
description = "Cybersecurity threat detection pipeline"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "joblib",
    "polars",
    "scikit-learn",
    "uvicorn",
]

[project.optional-dependencies]
dev = [
    "ipykernel",
    "matplotlib",
    "nbformat",
    "pandas",
    "plotly",
    "pyarrow",
    "pytest",
    "scipy",
    "seaborn",
    "xgboost",  # GPU version for local training
]

cpu = [
    "xgboost-cpu",  # CPU-only for deployment
]
